<resources>
    <string name="app_name">科成JavaClub</string>
    <string name="title_home">俱乐部</string>
    <string name="title_kc">教务系统</string>
    <string name="title_contest">校园资讯</string>
    <string name="title_bai">百叶计划</string>
    <string name="title_settings">个人设置</string>

    <string name="home_loading">正在进入俱乐部…</string>

    <string name="model_contest">校园资讯</string>
    <string name="model_contest_desc">你可以在这里快速了解最新的校园资讯。</string>
    <string name="model_contest_note">以下不同板块内容由不同部门提供，所有内容都是经过管理员审核，如有疑惑请联系对应的负责部门。</string>
    <string name="model_contest_contest">以下功能模块的数据由 <u> %1$s </u>提供，我们旨在为同学们提供最新最有含金量的赛事信息和活动。</string>
    <string name="model_contest_market">以下功能模块的数据由 <u> %1$s </u> 提供，用于帮助同学们出售旧物和低价回购，当然也会有一些全新商品在这里售卖。</string>
    <string name="model_contest_job">以下功能模块的数据由 <u> %1$s </u> 提供，用于发布校外兼职信息。（注意：请谨慎选择，所有的兼职均由第三方机构提供，请认真核实相关信息，出现任何问题我们概不负责）</string>
    <string name="contest_unknown">暂无最新竞赛消息，敬请期待！</string>
    <string name="contest_loading">正在获取相关数据…</string>
    <string name="contest_more">了解更多详情</string>
    <string name="driect_no_app">您的手机上还没安装QQ哦，请安装后再使用！</string>
    <string name="job_local">位置：%1$s</string>
    <string name="job_time">发布时间：%1$s</string>
    <string name="job_host">发布单位：%1$s</string>
    <string name="job_unit">\u0020/ %1$s</string>
    <string name="job_detail_price">薪资待遇</string>
    <string name="market_btn_manage">发布/收购物品</string>
    <string name="market_btn_join">加群了解详情</string>
    <string name="market_time">发布于：%1$s</string>
    <string name="market_price">￥%1$s</string>
    <string name="market_tab_add">发布新商品</string>
    <string name="market_tab_my">管理个人商品</string>
    <string name="market_tip_title">商品标题必须是5–20个字之间！</string>
    <string name="market_tip_desc">商品描述必须是10–100个字之间！</string>
    <string name="market_tip_img">至少需要添加一张图片！</string>
    <string name="market_tip_price">定价只能在1–10000元之间！</string>
    <string name="market_tip_qq">请输入正确的QQ号码！</string>
    <string name="market_publish_success">发布成功，审核完成后就能出现在列表啦！</string>
    <string name="market_publish_failed">未知错误，发布失败！</string>
    <string name="market_upload_failed">图片上传失败！</string>
    <string name="market_upload">正在上传</string>
    <string name="market_cancel">下架</string>
    <string name="market_cancel_success">商品下架成功！</string>
    <string name="market_cancel_failed">未知错误，下架失败！</string>
    <string name="market_status_wait">待审核</string>
    <string name="market_status_sale">已上架</string>
    <string name="market_status_canceled">已下架</string>
    <string name="market_detail_tip">上架的商品由提供方自行担保，本平台不承担任何责任，请各位用户在取得联系后谨慎交易，谨防上当受骗！</string>
    <string name="market_detail_btn">立即联系</string>
    <string name="market_mamage_title">管理已上架的物品</string>
    <string name="market_add_title">出售/收购商品</string>
    <string name="market_add_hint_title">商品标题(5–20个字)</string>
    <string name="market_add_hint_desc">商品描述(10–200个字)</string>
    <string name="market_add_hint_img">添加图片…（最多添加三张哦~）</string>
    <string name="market_add_price">请输入定价</string>
    <string name="market_add_hint_price">范围1–10000之间</string>
    <string name="market_add_qq">请输入联系QQ号</string>
    <string name="market_add_hint_qq">请输入正确的QQ号</string>
    <string name="market_add_type">请选择发布类型</string>
    <string name="market_add_type_sale">出售</string>
    <string name="market_add_type_buy">收购</string>
    <string name="market_add_btn">发布到跳蚤市场</string>

    <string name="model_kc">教务系统</string>
    <string name="model_kc_desc">含教务系统的全部功能，包括成绩查询、课程表查询等。</string>
    <string name="btn_kc_score">学期成绩查询</string>
    <string name="btn_kc_class">课程表查询</string>
    <string name="btn_kc_user">学籍信息查询</string>
    <string name="kc_loading">正在连接到教务系统…</string>
    <string name="kc_announce_none">电子科技大学成都学院 通知公告</string>
    <string name="kc_fragment_bind_title">绑定您的学号</string>
    <string name="kc_fragment_bind_text">需要绑定学号（教务系统账号）之后才能使用教务系统功能哦，我们注重个人隐私，不会在远端保留您的密码和个人信息，敏感内容只会保存在本地</string>
    <string name="kc_fragment_bind_input_id">学号</string>
    <string name="kc_fragment_bind_input_password">密码(默认身份证后六位)</string>
    <string name="kc_fragment_bind_btn_login">登陆</string>
    <string name="kc_fragment_bind_btn_login_do">正在验证…</string>
    <string name="kc_fragment_tip_verify_ode">验证码</string>
    <string name="kc_fragment_tip_blank">请输入验证码!</string>
    <string name="kc_fragment_tip_account_error">登陆失败，账号或密码错误!</string>
    <string name="kc_fragment_card_line_1">%1$s级 %2$s</string>
    <string name="kc_fragment_card_line_2">学号：%1$s</string>
    <string name="kc_fragment_card_line_3">院系：%1$s（%2$s）</string>
    <string name="model_kc_note">以下功能模块的网络请求，会直接访问教务系统接口，无需经过App服务器进行数据传输或中转，全力保证个人隐私数据不会泄露。</string>
    <string name="kc_account_timeout">登陆已过期，正在重新登陆…</string>
    <string name="kc_score_loading">正在读取成绩信息…</string>
    <string name="kc_score_finished">已完成课程数</string>
    <string name="kc_score_credit">已获得总学分</string>
    <string name="kc_score_avg_points">当前平均绩点</string>
    <string name="kc_score_unknown_error">未知错误，无法获取成绩信息！</string>
    <string name="kc_score_card_term">%1$s学年 第%2$d学期</string>
    <string name="kc_score_line_value">学分 %1$.1f（绩点 %2$.1f）</string>
    <string name="kc_class_loading">正在读取课程表信息…</string>
    <string name="kc_class_monday">周一</string>
    <string name="kc_class_tuesday">周二</string>
    <string name="kc_class_wednesday">周三</string>
    <string name="kc_class_thursday">周四</string>
    <string name="kc_class_friday">周五</string>
    <string name="kc_class_saturday">周六</string>
    <string name="kc_class_sunday">周日</string>
    <string name="kc_class_unknown_error">未知错误，无法获取课程表信息！</string>
    <string name="kc_class_week_select">请选择本周为单/双周</string>
    <string name="kc_class_week_odd">单周</string>
    <string name="kc_class_week_dual">双周</string>
    <string name="kc_class_term_select">请选择学期</string>
    <string name="kc_class_level_b_1">本科 %1$d-%2$d 学年（上）</string>
    <string name="kc_class_level_b_2">本科 %1$d-%2$d 学年（下）</string>
    <string name="kc_class_level_z_1">专科 %1$d-%2$d 学年（上）</string>
    <string name="kc_class_level_z_2">专科 %1$d-%2$d 学年（下）</string>
    <string name="kc_class_card_teacher">任课老师：%1$s</string>
    <string name="kc_class_card_time">上课时间：周 %1$s 第 %2$s 节</string>
    <string name="kc_class_card_local">上课地点：%1$s</string>
    <string name="kc_class_card_week">周数：%1$s</string>
    <string name="kc_class_card_week_odd">%1$s-%2$s（单）</string>
    <string name="kc_class_card_week_dual">%1$s-%2$s（双）</string>
    <string name="kc_class_card_table">%1$s\n%2$s\n%3$s\n%4$s</string>
    <string name="kc_class_widget_day">上午</string>
    <string name="kc_class_widget_noon">下午</string>
    <string name="kc_class_widget_night">晚间</string>
    <string name="kc_class_detail_ok">确定</string>
    <string name="kc_class_detail_delete">删除此课程</string>

    <string name="model_bai">百叶计划</string>
    <string name="model_bai_loading">正在连接到百叶计划…</string>
    <string name="model_bai_desc">包含活动报名、活动取消、积分查询等功能。</string>
    <string name="model_bai_bind_text">需要绑定学号（百叶计划账号）之后才能使用百叶计划功能哦，我们注重个人隐私，不会在远端保留您的密码和个人信息，敏感内容只会保存在本地</string>
    <string name="model_bai_bind_error">请先绑定教务系统账号</string>
    <string name="bai_name_md">明德</string>
    <string name="bai_name_dx">笃行</string>
    <string name="bai_name_bx">博学</string>
    <string name="bai_name_jm">尽美</string>
    <string name="bai_name_all">全部</string>
    <string name="bai_pass">已达标</string>
    <string name="bai_failed">继续努力</string>
    <string name="bai_score_add">加分记录</string>
    <string name="bai_activity_list">百叶计划活动列表</string>
    <string name="btn_bai_join">所有活动</string>
    <string name="btn_bai_manage">管理我的活动</string>
    <string name="btn_bai_score">百叶积分</string>
    <string name="bai_fragment_bind_input_password">密码(默认123456)</string>
    <string name="bai_no_net">当前网络无法访问到百叶计划，请连接校园内网络！</string>
    <string name="bai_activity_detail_local">活动地点：%1$s</string>
    <string name="bai_activity_detail_time">活动时间：%1$s</string>
    <string name="bai_activity_detail_people">报名人数：%1$d/%2$d</string>
    <string name="bai_activity_detail_status">当前状态：%1$s</string>
    <string name="bai_activity_detail_cancel">取消参加此活动</string>
    <string name="bai_activity_detail_join">报名参加此活动</string>
    <string name="bai_activity_detail_stop">报名已结束</string>
    <string name="bai_activity_detail_end">活动已结束</string>
    <string name="bai_activity_detail_running">活动正在进行中</string>
    <string name="bai_activity_cancel_success">活动取消成功！</string>
    <string name="bai_activity_join_success">活动报名成功！</string>
    <string name="bai_activity_status_wait">(报名中)</string>
    <string name="bai_activity_status_running">(活动中)</string>
    <string name="bai_activity_status_stop">(报名结束)</string>
    <string name="bai_activity_status_end">(已结束)</string>
    <string name="bai_activity_filter">请选择筛选的活动类型</string>
    <string name="bai_my_cancel">取消报名此活动</string>
    <string name="bai_my_qrcode">核验码：%1$s</string>
    <string name="bai_my_finish">已完成的活动</string>
    <string name="bai_my_wait">待参加的活动</string>
    <string name="bai_my_absent">缺席的活动</string>

    <string name="login_name">用户名/邮箱</string>
    <string name="login_password">密码</string>
    <string name="login_btn">登录</string>
    <string name="register_link"><u>注册</u></string>
    <string name="forgot_link"><u>忘记密码？</u></string>
    <string name="login_github_btn">使用GitHub登录</string>
    <string name="login_qq_btn">使用QQ登录</string>
    <string name="login_title">登陆科成JavaClub App</string>
    <string name="login_connect">正在登录到俱乐部…</string>
    <string name="login_failed">登陆失败，可能是用户名或密码错误！</string>
    <string name="login_check">同意JavaClub App的<u>隐私政策</u></string>
    <string name="login_check_tip">请先同意并勾选App隐私政策！</string>
    <string name="login_info_tip">请完整填写用户名和密码！</string>
    <string name="login_timeout">登陆失败，请重新登陆！</string>

    <string name="settings_info">你可以对您的学号（教务账号）、百叶计划账号进行绑定，我们只会在远端保存您的学号，个人信息和密码都存储在本地，这些敏感信息会跟随软件卸载一起移除</string>
    <string name="settings_user_id">已绑定学号</string>
    <string name="settings_user_qq">已绑定QQ账号</string>
    <string name="settings_user_email">已绑定邮箱</string>
    <string name="settings_dark_mode">使用深色模式</string>
    <string name="settings_auto_dark">颜色跟随系统变换</string>
    <string name="settings_auto_update">自动检查更新</string>
    <string name="settings_dark_info">切换颜色配置后，需要重新启动APP生效</string>
    <string name="settings_btn_update">检查更新</string>
    <string name="settings_btn_update_do">正在检查更新…</string>
    <string name="settings_user_id_no">未绑定</string>
    <string name="settings_btn_update_no">已经是最新版本啦~</string>
    <string name="settings_btn_exit">退出登陆</string>
    <string name="settings_btn_contact">联系我们</string>
    <string name="settings_version">当前版本</string>
    <string name="update_btn">立即更新</string>
    <string name="update_new">检测到版本更新，赶快升级吧!</string>
    <string name="update_version">当前版本：%1$s，最新版本：%2$s</string>
    <string name="settings_user_github_name">Github账号关联</string>
    <string name="settings_user_github_disconnected">未关联</string>
    <string name="settings_user_github_connected">已关联</string>
    <string name="settings_user_github_home">个人主页：<u>%1$s</u></string>
    <string name="settings_user_github_join">加入Github时间：%1$s</string>
    <string name="settings_user_github_repo">公共仓库</string>
    <string name="settings_user_github_fans">粉丝</string>

    <string name="add_widget">添加小组件</string>
    <string name="app_widget_description">课程表小组件</string>
</resources>