<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:clipToPadding="true"
    tools:context=".ui.kc.sub.KcTableActivity">

    <TableLayout
        android:id="@+id/class_table"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            style="@style/FunctionButtonBai"
            app:icon="@drawable/icon_kc"
            app:iconSize="30dp"
            android:id="@+id/kc_class_switch"
            android:text="2021-2022 学年（上）"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main"
            android:padding="1dp">

            <TextView
                android:layout_width="0.0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/kc_class_monday" />
            <TextView
                android:layout_width="0.0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/kc_class_tuesday" />
            <TextView
                android:layout_width="0.0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/kc_class_wednesday" />
            <TextView
                android:layout_width="0.0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/kc_class_thursday" />
            <TextView
                android:layout_width="0.0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/kc_class_friday" />
            <TextView
                android:layout_width="0.0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/kc_class_saturday" />
            <TextView
                android:layout_width="0.0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/kc_class_sunday" />
        </TableRow>

        <TableRow
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <View android:layout_height="120dp"/>
        </TableRow>

        <TableRow
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TableRow>

        <TableRow
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TableRow>

        <TableRow
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TableRow>

        <TableRow
            android:id="@+id/row5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>