<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="11sp"
            android:text="@string/model_kc_note"
            android:textColor="@color/dark_gray"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/green"
        app:cardElevation="10dp">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            app:cardCornerRadius="10dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/kc"/>
        </com.google.android.material.card.MaterialCardView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            android:layout_marginStart="55dp"
            android:text="@string/model_kc"
            android:textColor="@color/white"
            android:gravity="center_vertical"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textSize="11sp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="28dp"
            android:text="@string/model_kc_desc"
            android:textColor="@color/light_gray"
            android:gravity="center_vertical"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_kc_score"
                style="@style/FunctionButtonKc"
                android:text="@string/btn_kc_score"
                app:cornerRadius="0dp"
                app:icon="@drawable/icon_kc"
                app:iconSize="20dp" />

            <View style="@style/SpiltLine"
                android:background="@color/gray"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_kc_class"
                style="@style/FunctionButtonKc"
                android:text="@string/btn_kc_class"
                app:cornerRadius="0dp"
                app:icon="@drawable/icon_class_table"
                app:iconSize="20dp" />

            <View style="@style/SpiltLine"
                android:background="@color/gray"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_kc_user"
                style="@style/FunctionButtonKc"
                android:text="@string/btn_kc_user"
                app:cornerRadius="0dp"
                app:icon="@drawable/icon_kc_user"
                app:iconSize="20dp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>