<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login_bg" />

    <LinearLayout
        android:layout_marginHorizontal="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

       <ImageView
           android:layout_width="match_parent"
           android:layout_height="100dp"
           android:layout_marginBottom="30dp"
           android:src="@drawable/logo" />

        <EditText
            android:id="@+id/input_id"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="#fefefe"
            android:textAlignment="center"
            android:hint="@string/login_name"
            android:lines="1"
            android:maxLength="20"
            android:background="@drawable/translucent"/>

        <EditText
            android:id="@+id/input_pwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="#fefefe"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:hint="@string/login_password"
            android:lines="1"
            android:maxLength="20"
            android:background="@drawable/translucent"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:id="@+id/btn_login"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/login_btn"
            style="@style/LoginButton"
            app:cornerRadius="25dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_height="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:shadowColor="@color/gray"
                android:shadowRadius="10"
                android:id="@+id/link_register"
                android:text="@string/register_link" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/white"
                android:shadowColor="@color/gray"
                android:shadowRadius="10"
                android:id="@+id/link_forget"
                android:text="@string/forgot_link" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="1dp"
            android:background="#46959595"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

        </LinearLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login_mask"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#61000000"/>

        <club.cduestc.ui.LoadingView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>